# meeting-intelligence

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
plans/: let-s-organize-this-repo-agile-treasure.md  mi-cli-with-shared-services.md
prompts/: analytical-persona.md  monetera-context.md  output-formats.md
runbooks/: runbook.md
src/cli/: analyze_cmd.py  attribute_cmd.py  compare_cmd.py  main.py  slice_cmd.py  summarize_cmd.py  transcribe_cmd.py
src/config/: settings.py
src/services/: slicing.py  speaker_attribution.py  transcription.py  visual_analysis.py
