[project]
name = "meeting-intelligence"
version = "0.1.0"
description = "Meeting intelligence CLI and services for Monetera"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "rich>=13",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "google-genai>=0.3",
]

[project.scripts]
mi = "src.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
